chore: modified api routes and response api
